# j2tester.com

./: .gitignore  CHANGELOG.md  README.md  changelog.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: api-code-test.yml  ghcr-tag-build.yml  release-pr.yml  release.yml  tag-release.yml  web-code-test.yml
backend/: Dockerfile  Dockerfile.dev  app.py  entrypoint_dev.sh  pyproject.toml
backend/api/: main.py
backend/api/app/helpers/: misc.py  schemas.py
backend/api/app/routes/: render.py
frontend/: Dockerfile  Dockerfile.dev  entrypoint.sh  index.html
frontend/nginx/: nginx.conf.template
frontend/web/: eslint.config.mjs  package.json  webpack.config.js
frontend/web/src/: index.html
frontend/web/src/css/: index.css
frontend/web/src/js/: index.js
