[tool.poetry]
package-mode = false
name = "j2tester.com"
version = "0.0.1"
description = "Utility for testing Ansible templates"
authors = ["dsgnr <email@danielhand.io>"]
repository = "https://github.com/dsgnr/j2tester.com"
license = "GNU General Public License v3.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["prometheus"], version = "^2.15.1"}
gunicorn = "23.0.0"
pydantic = "^2.10.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
ansible-core = "^2.18.3"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
