[tool.poetry]
package-mode = false
name = "j2tester.com"
version = "0.0.2"
description = "Utility for testing, parsing and rendering Ansible or Jinja2 templates"
authors = ["dsgnr <email@danielhand.io>"]
repository = "https://github.com/dsgnr/j2tester.com"
license = "GNU General Public License v3.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["prometheus"], version = "^2.15.2"}
gunicorn = "23.0.0"
pydantic = "^2.11.3"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
ansible-core = "^2.18.3"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
isort = "^6.0.1"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.pylint]
init-hook='import sys; sys.path.append("api")'
